Coverity analysis defect 154822: Data race condition

XMLWordPrintableJSON

    • Networking & Observability
    • Fully Compatible
    • ALL
    • N&O 2025-08-18
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /data/mci/76c3f54a72fd69f47896950028d12866/bazel_cache/a66e96dcfafe8eff7b8a4acdb22a1846/execroot/_main/src/mongo/db/process_health/fault_manager.cpp:402: MISSING_LOCK 154822 Accessing "this->_fault" without holding lock "mongo::process_health::FaultManager._mutex". Elsewhere, "mongo::process_health::FaultManager._fault" is written to with "FaultManager._mutex" held 4 out of 4 times.

            Assignee:
            Didier Nadeau
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: