SERVER-108737 Ensure _fault access is controlled by the mutex (#40075)

GitOrigin-RevId: 959d8457458a8cf2910e012acdfcec90aa522f3b